...
                                ),
                              ),
                            ),
                          ),
                        ),
                        Text(
                          'New Product',
                          style:
                              FlutterFlowTheme.of(context).titleSmall.override(
                                    fontFamily: 'General Sans',
                                    letterSpacing: 0.0,
                                    lineHeight: 1.33,
                                  ),
...
                                                    .labelMedium
                                                    .override(
                                                      fontFamily:
                                                          'General Sans',
                                                      letterSpacing: 0.0,
                                                    ),
                                            hintText: 'eg. Nike Dunks',
                                            hintStyle: FlutterFlowTheme.of(
                                                    context)
                                                .bodyLarge
                                                .override(
                                                  fontFamily: 'General Sans',
                                                  color: Color(0xFFD6D6D6),
...
                                            .bodyMedium
                                            .override(
                                              fontFamily: 'General Sans',
                                              letterSpacing: 0.0,
                                              lineHeight: 1.5,
                                            ),
                                        hintText: 'Select Category...',
                                        searchHintText: 'Search...',
                                        icon: Icon(
                                          Icons.keyboard_arrow_down_rounded,
                                          color: Color(0xFF645E82),
                                          size: 24.0,
                                        ),
...
                                                    .labelMedium
                                                    .override(
                                                      fontFamily:
                                                          'General Sans',
                                                      letterSpacing: 0.0,
                                                    ),
                                            hintText: 'eg. 1.2',
                                            hintStyle: FlutterFlowTheme.of(
                                                    context)
                                                .bodyLarge
                                                .override(
                                                  fontFamily: 'General Sans',
                                                  color: Color(0xFFD6D6D6),
...
                                              child: Column(
                                                mainAxisSize: MainAxisSize.max,
                                                mainAxisAlignment:
                                                    MainAxisAlignment.center,
                                                children: [
                                                  Text(
                                                    'NGN',
                                                    style: FlutterFlowTheme.of(
                                                            context)
                                                        .bodyMedium
                                                        .override(
                                                          fontFamily:
                                                              'General Sans',
...
                                  );
                                  
                                  safeSetState(() {});
                                },
                              );
                          },
                          text: 'Next',
                          options: FFButtonOptions(
                            height: 72.0,
                            padding: EdgeInsetsDirectional.fromSTEB(
                                32.0, 24.0, 32.0, 24.0),
                            iconPadding: EdgeInsetsDirectional.fromSTEB(
                                0.0, 0.0, 0.0, 0.0),
...
