...
  void insertAtIndexInQtyBase(int index, String value) {
    qtyBase.insert(index, value);
  }

  List<String> _productCategories = [
    'Fashion & Clothing',
    'Shoes',
    'Bags',
    'Beauty & Skincare',
    'Phones & Accessories',
    'Computers & Gadgets',
    'Home & Furniture',
    'Kitchen & Appliances',
...
