...
                                      Icon(
                                        Icons.mail_outlined,
                                        color: Color(0xFF0C1D1F),
                                        size: 16.0,
                                      ),
                                      Text(
                                        'Login with email address',
                                        style: FlutterFlowTheme.of(context)
                                            .labelMedium
                                            .override(
                                              fontFamily: 'General Sans',
                                              color: Color(0xFF0C1D1F),
                                              letterSpacing: 0.0,
...
